fixed container stretching

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     left: 50%;
     top: 50%;
     transform: translate(-50% , -50%);
+    max-width: 257px;
 }
 
 .calculator{
@@ -54,6 +55,8 @@ body{
 .display{
     height: 45px;
     text-align: right;
+    max-width: 255px;
+    overflow: scroll;
     padding: 10px;
     margin: 3px 1px 10px;
     border: 1px #8a8a8a;
@@ -62,6 +65,24 @@ body{
     font-size: large;
     background-color:darkgray;
     box-shadow: inset 0 0 5px;
+}
+
+.display::-webkit-scrollbar{
+    width: 6px;
+    height: 6px;
+}
+
+.display::-webkit-scrollbar-track{
+    background: #8a8a8a;
+    border-radius: 20px; 
+}
+
+.display::-webkit-scrollbar-thumb{
+    background: #6a6a6a; 
+}
+
+.display::-webkit-scrollbar-thumb:hover{
+    background: #555; 
 }
 
 .buttons{
